# yexingxu

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CheckAndAddFiles.cmake  ExtractComponentVersion.cmake
doc/c++/: stl.md  test  test_thread_pool.cc  thread_pool.hpp
ipc/: CMakeLists.txt
ipc/include/infrastructure/: duration.h
ipc/include/infrastructure/semaphore/: unnamed_semaphore.h
ipc/include/utils/: algorithm.h  macro.h  system_call.h
ipc/src/infrastructure/: duration.cc
ipc/src/infrastructure/semaphore/: unnamed_semaphore.cc
ipc/test/: CMakeLists.txt  test.hpp
ipc/test/infrastructure/: test_unnamed_semaphore.cc
other/: allocator.md  muti-thread.md  producer-customer.md  producer_consumer_queue.h  shared_ptr.h  some-ip.md  spsc_queue.h
serialize/: CMakeLists.txt  ser_config.hpp  serialize.hpp
serialize/append_types/variant/: config.hpp
serialize/detail/: a.i  alignment.hpp  calculate_size.hpp  deserializer.hpp  endian_wrapper.hpp  for_each_macro.hpp  macro.hpp  memory_reader.hpp  memory_writer.hpp  reflection.hpp  return_code.hpp  serializer.hpp  size_info.hpp  trivial_view.hpp  type_calculate.hpp  type_id.hpp  utils.hpp
serialize/test/: alignment_test.cc  calculate_size_test.cc  deserializer_test.cc  endian_test.cc  serializer_test.cc  test_helper.cc  type_calculate_test.cc  type_id_test.cc  user_defined_struct.h
shared_memory/: CMakeLists.txt  shm-config.cmake.in
shared_memory/include/: shared_memory_object.hpp  shared_memory_user.hpp
shared_memory/include/details/: file_access.hpp  file_management_interface.hpp  memory_map.hpp  scope_guard.hpp  shared_memory.hpp  signal_handle.hpp
shared_memory/include/entity/: base_port.hpp  base_port_data.hpp  base_publisher.hpp  chunk_distributor_data.hpp  chunk_queue_data.hpp  chunk_queue_pusher.hpp  chunk_receiver_data.hpp  chunk_sender_data.hpp  condition_notifier.hpp  condition_variable_data.hpp  cycle_index.hpp  fifo.hpp  index_queue.hpp  lockfree_queue.hpp  locking_policy.hpp  mutex.hpp  port_data_types.hpp  port_policy.hpp  publisher.hpp  publisher_impl.hpp  publisher_interface.hpp  publisher_port_data.hpp  publisher_port_user.hpp  resizeable_lockfree_queue.hpp  sample.hpp  shm_safe_unmanaged_chunk.hpp  smart_chunk.hpp  sofi.hpp  typed_port_traits.hpp  used_chunk_list.hpp  varaint_queue.hpp
shared_memory/include/listener/: conditional_listener.hpp  conditional_verialble_data.hpp  enum_trigger_types.hpp  listener.hpp  notifier_callback.hpp
shared_memory/include/memory/: bump_allocator.hpp  chunk_distributor.hpp  chunk_header.hpp  chunk_management.hpp  chunk_sender.hpp  chunk_setting.hpp  config.hpp  loffli.hpp  memory_configs.hpp  memory_manager.hpp  memory_pool.hpp  segment.hpp  segment_manager.hpp  shared_chunk.hpp
shared_memory/include/plog/: Log.h
shared_memory/include/sem/: duration.hpp  semaphore_interface.hpp  unnamed_semaphore.hpp
shared_memory/include/shm/: algorithm.hpp  file_access.hpp  file_management_interface.hpp  group.hpp  master_memory_manager.hpp  memory.hpp  memory_block.hpp  memory_info.hpp  memory_map.hpp  memory_provider.hpp  new_type.hpp  pointer_repository.hpp  relative_pointer.hpp  relative_pointer_data.hpp  scope_guard.hpp  shared_memory.hpp  shared_memory_object.hpp  shared_memory_provider.hpp  signal_handle.hpp  system_call.hpp  user.hpp  utils.h
shared_memory/include/types/: apply.hpp  optional.hpp  unique_id.hpp  unique_port_id.hpp  variant.hpp
shared_memory/include/types/variant/: in_place.hpp  lib.hpp
shared_memory/include/utils/: acl.hpp  type_traits.hpp
shared_memory/src/: shared_memory_object.cc  shared_memory_user.cc
shared_memory/src/details/: file_management_interface.cc  memory_map.cc  shared_memory.cc  signal_handle.cc  utils.cc
shared_memory/src/entity/: base_port.cc  condition_notifier.cc  locking_policy.cc  mutex.cc  publisher_port_user.cc  shm_safe_unmanaged_chunk.cc
shared_memory/src/memory/: bump_allocator.cc  chunk_header.cc  chunk_setting.cc  config.cc  loffli.cc  memory_manager.cc  memory_pool.cc  shared_chunk.cc
shared_memory/src/sem/: semaphore_interface.cc  unnamed_semaphore.cc
shared_memory/src/shm/: algorithm.cc  file_access.cc  file_management_interface.cc  group.cc  memory.cc  memory_block.cc  memory_manager_master.cc  memory_map.cc  memory_provider.cc  relative_pointer_data.cc  shared_memory.cc  shared_memory_object.cc  shared_memory_provider.cc  signal_handle.cc  user.cc  utils.cc
shared_memory/src/types/: unique_port_id.cc
shared_memory/test/: CMakeLists.txt  test_bump_allocator.cc  test_chunk_header.cc  test_chunk_setting.cc  test_listener.cc  test_memory_manager.cc  test_memory_pool.cc  test_memory_provider.cc  test_publisher.cc  test_semgent.cc  test_shared_memory.cc  test_shared_memory_object.cc  test_shared_memory_provider.cc
shared_memory/test/mock/: chunk_mock.hpp  memory_block_mock.hpp  memory_provider_mock.hpp  publisher_mock.hpp
template/: CMakeLists.txt  conditional.h  is_v.hpp  template-template-parameter.h  template_test.cc  双重模板参数.md  类型获取.md
template/serialize/: alignment.hpp  calculate_size.hpp  compatible.hpp  deserializer.hpp  endian_wapper.hpp  endian_wrapper.hpp  error_code.hpp  if_constexpr.hpp  md5_constexpr.hpp  memory_reader.hpp  memory_writer.hpp  optional.hpp  reflection.hpp  serialize.hpp  serializer.hpp  size_info.hpp  trivial_view.hpp  type_calculate.hpp  type_id.hpp  type_traits.hpp  utils.hpp
test/: CMakeLists.txt  c  client.cc  common.h  macrotest.h  macrotest1.h  s  server.cc  test  test.cc
test/src/: test.cc
test/template/: align_test.cc  type_calculate_test.cc  type_id_test.cc
